ingress-rust-btc-full-node.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-rust-btc-full-node
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: rust-btc-full-node.bitgo-dev.com
    http:
      paths:
      - path: /
        backend:
          serviceName: service-rust-btc-full-node
          servicePort: 8332
  tls:
  - hosts:
    - rust-btc-full-node.bitgo-dev.com
    secretName: rust-btc-full-node-ingress-tls
